Flex children height overflow fixed. See http://stackoverflow.com/questions/35103971/flex-div-inherits-grandparents-height-instead-of-parents/35106331?noredirect=1#comment57935568_35106331

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3,7 +3,7 @@
  */
 .app {
   flex: 1;
-  height: 100%;
+  height: calc(100% - 55px);
   order: 2;
 }
 
@@ -33,7 +33,7 @@
 .flexWrapper {
   display: flex;
   flex-flow: row wrap;
-  height: inherit;
+  height: 100%;
   width: 100%;
 }
 
